--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       Hi Ate,<br>
       I made this for you.<br>
       Open it whenever you need a little comfort.
+      Stay Safe Always Ate!! -Luv Lee
     </p>
 
     <audio id="bgMusic"></audio>
@@ -259,3 +260,4 @@
 
 </body>
 </html>
+
